--- a/TareaExamen/Proyecto1.tex
+++ b/TareaExamen/Proyecto1.tex
@@ -1,12 +1,12 @@
 \documentclass[letterpaper,11pt]{article}
 
 \usepackage[utf8]{inputenc}
-\usepackage[spanish,mexico]{babel}
+\usepackage[spanish]{babel}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{amsfonts}
-%\usepackege{amssymb}
+\usepackage{amssymb}
 \usepackage[hmargin=1in, vmargin=1in]{geometry}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
@@ -18,6 +18,18 @@
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 \newtheorem{definition}{Definición}
+\newcommand{\tq}{ \quad \cdot  \backepsilon \cdot \quad }
+
+\newcommand{\ld}{\lim\limits_{x \to 0^{+}}}
+
+\newcommand{\li}{\lim\limits_{x \to 0^{-}}}
+
+\newcommand{\la}{\lim\limits_{x \to a}}
+
+\newcommand{\R}{\mathds{R}}
+
+\renewcommand{\*}{\cdot}
+
 
 \providecommand{\abs}[1]{\lvert#1\rvert}
 \providecommand{\norm}[1]{\lVert#1\rVert}
@@ -44,9 +56,6 @@
 %=================================================================================
 \begin{document}
 
-
-
-%%%%%%%%%%%%%%%%%%%%%            CARÁTULA            %%%%%%%%%%%%%%%%%%%%%%%%%
 \setlength{\unitlength}{1cm}
 \thispagestyle{empty}
 
@@ -65,6 +74,7 @@ Ayud. Irving Hérnandez Rosas \\
 \begin{definition}
 	El conjutno de los puntos del plano tales que están a la misma distancia de una recta dada $ D $ y de un punto $ \vec{F} $, que no esté sobre $ D $, recibe el nombre de \textbf{parábola}
 \end{definition}
+Para deducir la ecuación de la parábola supongamos que la coordenadas de $ \vec{F} = (p,0) $ y que la recta D está descrita por $ w = (-p,y) \qquad \forall y \in $
 \begin{enumerate}
 
 % -----------------------------------------------------
